--- a/src/components/form/SubmitButton.module.css
+++ b/src/components/form/SubmitButton.module.css
@@ -1,4 +1,5 @@
 .submitButton {
+    position: relative;
     background-color: var(--ligth-theme-color);
     border: 1px solid var(--dark-theme-color);
     padding: 0.4em 1em;
