--- a/src/components/layout/ProfileNavBar.module.css
+++ b/src/components/layout/ProfileNavBar.module.css
@@ -8,12 +8,13 @@
 
 .profile_nav_bar {
     position: fixed;
+    z-index: 1;
     border-bottom: 1px solid var(--ligth-font-color);
 }
 
 .profile_nav_bar ul {
     list-style: none;
-    padding: 0.3em 4%;
+    padding: 0.2em 4%;
     align-items: center;
     justify-content: space-between;
 }
@@ -30,7 +31,7 @@
 }
 
 .profile_nav_bar ul div li img {
-    height: 2em;
+    height: 1.5em;
     display: block;
 }
 
@@ -42,4 +43,10 @@
 .profile_nav_bar_sub_container {
     display: flex;
     gap: 2em;
+}
+
+@media screen and (max-width: 663px) {
+    .profile_nav_bar {
+        position: relative;
+    }
 }
