--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   box-sizing: border-box;
   font-family: "Roboto", "Open Sans", sans-serif;
   color: var(--ligth-font-color);
+  user-select: none;
   /* border: 1px solid red; */
 }
 
