--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 :root {
-  --ligth-theme-color: #068801;
-  --dark-theme-color: #023000;
+  --ligth-theme-color: #00bf63;
+  --dark-theme-color: #00572d;
   --dark-font-color: #000000;
   --ligth-font-color: #e7e7e7;
-  --alert-color: #cc1f1f;
+  --alert-color: #ff0000;
   --dark-bg-color: #101010;
   --ligth-bg-color: #3c3c3c;
   --white-bg-color: #898989;
