--- a/client/src/components/form/EditProfileForm.module.css
+++ b/client/src/components/form/EditProfileForm.module.css
@@ -14,6 +14,7 @@
     backdrop-filter: brightness(0.2);
     height: max-content;
     display: flex;
+    gap: 1em;
 }
 
 .inputs_container {
@@ -56,12 +57,15 @@
     .edit_profile_form {
         width: 100%;
         height: 100%;
+        min-height: unset;
         transition: opacity 1s ease, transform 1s ease 1s;
         position: absolute;
         left: 0;
         top: 0;
         padding: 1em;
         overflow: auto;
+        border-radius: 0;
+        border: 2px solid blue;
     }
 
     .edit_profile_form h2 {
