--- a/client/src/components/layout/SportCard.module.css
+++ b/client/src/components/layout/SportCard.module.css
@@ -1,50 +1,84 @@
 .sport_card {
-    width: 14em;
-    height: max-content;
-    display: flex;
+    height: 12em;
+    display: inline-flex;
+    width: 19.2em;
     padding: 1em;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     border: 2px solid var(--ligth-theme-color);
     background-color: var(--ligth-font-color);
-    gap: 1.5em;
     border-radius: 10px;
+    box-shadow: 5px 5px 10px rgb(72, 72, 72);
+    transition: filter 0.2s ease-in-out;
 }
 
 .sport_card img {
-    height: 3em;
+    height: 4em;
+    width: 4em;
     border-radius: 50%;
     border: 1px solid var(--dark-theme-color);
 }
 
 .info {
+    width: 11.5em;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 2em;
-    text-align: start;
+    text-align: end;
 }
 
 .sport_name {
-    color: var(--dark-font-color);
+    color: var(--dark-theme-color);
     letter-spacing: 1px;
     font-size: 1.2em;
+    font-weight: bold;
 }
 
 .categories {
     display: flex;
     flex-wrap: wrap;
     gap: 0.7em;
+    justify-content: end;
+    width: auto;
 }
 
 .category {
-    padding: 0.4em 0.3em;
+    padding: 0.4em 0.6em;
     font-size: 0.7em;
     border: 1px solid var(--dark-font-color);
     background-color: var(--ligth-bg-color);
     border-radius: 1.5em;
+    letter-spacing: 0.4px;
 }
 
 .selected {
     filter: brightness(50%);
+}
+
+@media screen and (max-width: 720px) {
+    .sport_card {
+        width: 14em;
+        height: 19.2em;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info {
+        width: 100%;
+        height: 11.5em;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+    }
+
+    .categories {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.7em;
+        justify-content: center;
+        width: auto;
+    }
 }
