--- a/client/src/components/form/EditProfileForm.module.css
+++ b/client/src/components/form/EditProfileForm.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 20em;
+    width: 21em;
     height: 100%;
     min-height: 39em;
     transition: all 1s ease;
@@ -15,6 +15,12 @@
     height: max-content;
     display: flex;
     gap: 1em;
+}
+
+.checkboxs {
+    gap: 1em;
+    display: flex;
+    flex-direction: column;
 }
 
 .inputs_container {
@@ -29,13 +35,6 @@
     flex-direction: column;
     align-items: center;
     gap: 1em;
-}
-
-.edit_profile_form img {
-    height: 2.5em;
-    width: 2.5em;
-    display: block;
-    margin-bottom: 0.4em;
 }
 
 .edit_profile_form h2 {
