--- a/client/src/components/form/LoginForm.module.css
+++ b/client/src/components/form/LoginForm.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     width: 20em;
     height: 100%;
     gap: 1em;
