--- a/client/src/components/pages/Login.module.css
+++ b/client/src/components/pages/Login.module.css
@@ -70,6 +70,7 @@
     .login_container {
         width: 100%;
         height: 100%;
+        min-height: 100dvh;
         border-radius: 0;
         flex-direction: column;
     }
