Correções de design e inclusão de opções para firefox + Correção na posição das midias na postagem + Criação das consultas e rotas necessárias para criar posts e suas hashtags

--- a/client/src/components/form/EditProfileForm.module.css
+++ b/client/src/components/form/EditProfileForm.module.css
@@ -12,6 +12,7 @@
     border-radius: 1.5em;
     padding: 1em;
     backdrop-filter: brightness(0.2);
+    background-color: #000000c5;
     height: max-content;
     display: flex;
     gap: 1em;
