--- a/client/src/components/pages/Login.module.css
+++ b/client/src/components/pages/Login.module.css
@@ -16,6 +16,8 @@
     width: max-content;
     display: flex;
     overflow: hidden;
+    position: relative;
+    background-color: #000000c5;
 }
 
 .forms_container {
