--- a/client/src/components/layout/AppNavBar.module.css
+++ b/client/src/components/layout/AppNavBar.module.css
@@ -34,3 +34,10 @@
     height: 1.5em;
     display: block;
 }
+
+@media screen and (min-width: 1500px) {
+    .app_nav_bar ul li img {
+        height: 2em;
+        display: block;
+    }
+}
