--- a/client/src/components/layout/FlashesSection.module.css
+++ b/client/src/components/layout/FlashesSection.module.css
@@ -11,7 +11,6 @@
     padding: 1em calc(0.7em + 10px) 1em 0.7em;
     align-items: center;
     gap: 1em;
-
 }
 
 .flashes_section {
@@ -88,5 +87,11 @@
         /* Para Firefox */
         /* scrollbar-width: thin; 
         scrollbar-color: var(--dark-theme-color) var(--white-bg-color); */
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    .flashes_section ul {
+        padding: 2.5em calc(0.7em + 10px) 2em 0.7em;
     }
 }
