--- a/client/src/components/pages/EditProfile.module.css
+++ b/client/src/components/pages/EditProfile.module.css
@@ -5,4 +5,5 @@
     background: var(--ligth-theme-color) url(../../img/background/bgLogin.svg) center;
     height: 100%;
     background-size: cover;
+    background-attachment: fixed;
 }
