--- a/client/src/components/layout/Post.module.css
+++ b/client/src/components/layout/Post.module.css
@@ -166,7 +166,7 @@
     border-bottom: 1px solid var(--ligth-font-color);
 }
 
-.caption::-webkit-scrollbar {
+/* .caption::-webkit-scrollbar {
     width: 6px; 
     margin-left: 1em;
 }
@@ -182,7 +182,7 @@
 
 .caption::-webkit-scrollbar-thumb:hover {
     background-color: var(--ligth-theme-color);
-}
+} */
 
 .caption p {
     height: 100%;
@@ -227,10 +227,14 @@ div.slide_right {
 .actions_itens {
     position: absolute;
     bottom: 8em;
+    right: 50%;
+    transform: translateX(50%);
     height: 15em;
+    width: 18.8em;
     overflow: auto;
     background-color: var(--dark-bg-color);
     border: 2px solid var(--dark-theme-color);
+    z-index: 2;
 }
 
 .actions_itens ul {
