Upload dos ícones dos esportes e correção em suas exibições + criação do contexto de perfil + Correção no tratamento do submit em login + Criação do componente photoInput + Adição da funcionalidade de adicionar foto de perfil no formulário de editProfile + Inserção da foto de perfil no banco + Inserção automática de usuário e configuração no banco ao criar um novo perfil + Criação de novas queries e ajuste nas rotas

--- a/client/src/components/form/EditProfileForm.module.css
+++ b/client/src/components/form/EditProfileForm.module.css
@@ -42,7 +42,7 @@
     font-size: 2em;
     letter-spacing: 1px;
     color: var(--ligth-theme-color);
-    margin-bottom: 1em;
+    margin: -0.4em 0 1em 0;
 }
 
 .empty_field_alert {
@@ -62,7 +62,6 @@
         position: absolute;
         left: 0;
         top: 0;
-        padding: 1em;
         overflow: auto;
         border-radius: 0;
     }
