--- a/client/src/components/layout/SportCard.module.css
+++ b/client/src/components/layout/SportCard.module.css
@@ -15,8 +15,12 @@
 .sport_card img {
     height: 4em;
     width: 4em;
-    border-radius: 50%;
-    border: 1px solid var(--dark-theme-color);
+    transition: all 0.2s ease-in-out;
+}
+
+.sport_card:hover img {
+    filter: drop-shadow(5px 5px 2px rgb(26, 26, 26));
+    transform: scale(1.1);
 }
 
 .info {
