--- a/client/src/components/form/TextareaInput.module.css
+++ b/client/src/components/form/TextareaInput.module.css
@@ -17,7 +17,7 @@
     height: 10.6em;
     border-radius: 5px;
     border: 1px solid var(--ligth-font-color);
-    background-color: transparent;
+    background-color: #00000096;
     padding: 1em;
     letter-spacing: 0.5px;
     outline: none;
