--- a/client/src/components/layout/Post.module.css
+++ b/client/src/components/layout/Post.module.css
@@ -237,11 +237,12 @@ div.slide_right {
     overflow: auto;
     background-color: var(--dark-bg-color);
     border: 2px solid var(--dark-theme-color);
-    z-index: 2;
+    z-index: 3;
 }
 
 .actions_itens ul {
-    width: max-content;
+    width: 100%;
+    min-width: max-content;
     display: flex;
     flex-direction: column;
     list-style: none;
@@ -257,6 +258,12 @@ div.slide_right {
 .actions_itens ul > li:hover,
 .selectedHashtag {
     background-color: var(--ligth-bg-color);
+}
+
+.actions_itens > form {
+    padding: 0.5em 0.5em 0 0.5em;
+    text-align: center;
+    cursor: default;
 }
 
 @media screen and (max-width: 720px) {
