Mudança no método de verificação de existência de um perfil com as mesmas credenciais únicas de outro + Mesma mudança para login + Segurança no sistema de autenticação de perfis: Comparação de credencias no back-end + criptografia de senhas usando flask-bcrypt + Mudança na fonte

--- a/client/src/components/form/LoginForm.module.css
+++ b/client/src/components/form/LoginForm.module.css
@@ -35,7 +35,7 @@
     margin-bottom: 1em;
 }
 
-.loginForm img {
+.title_container > img {
     height: 2.5em;
     width: 2.5em;
     display: block;
