--- a/client/src/components/layout/ProfileNavBar.module.css
+++ b/client/src/components/layout/ProfileNavBar.module.css
@@ -4,13 +4,13 @@
     height: max-content;
     width: 100%;
     background-color: var(--dark-bg-color);
+    min-width: max-content;
 }
 
 .profile_nav_bar {
     position: fixed;
     z-index: 4;
     border-bottom: 1px solid var(--ligth-font-color);
-
 }
 
 .profile_nav_bar ul {
@@ -18,6 +18,7 @@
     padding: 0.2em 4%;
     align-items: center;
     justify-content: space-between;
+    gap: 1em;
 }
 
 .profile_nav_bar ul li {
@@ -43,7 +44,7 @@
 
 .profile_nav_bar_sub_container {
     display: flex;
-    gap: 2em;
+    gap: 1em;
 }
 
 @media screen and (max-width: 720px) {
