--- a/client/src/components/layout/SportCard.module.css
+++ b/client/src/components/layout/SportCard.module.css
@@ -63,14 +63,16 @@
 @media screen and (max-width: 720px) {
     .sport_card {
         width: 14em;
-        height: 19.2em;
+        min-width: 11.2em;
+        height: 21.2em;
         flex-direction: column;
+        gap: 0.5em;
         align-items: center;
     }
 
     .info {
         width: 100%;
-        height: 11.5em;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
