--- a/client/src/components/pages/Home.module.css
+++ b/client/src/components/pages/Home.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--ligth-bg-color);
+    min-width: 22.3em;
 }
 
 .posts_section {
