--- a/client/src/components/pages/ProfilePreferences.module.css
+++ b/client/src/components/pages/ProfilePreferences.module.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
-    padding: 2em;
+    padding: 2em 0;
     background: var(--ligth-theme-color) url(../../img/background/bgPreferences.svg) center;
     background-size: cover;
     background-attachment: fixed;
+    align-items: center;
 }
 
 .profile_preferences_page form{
@@ -14,11 +15,10 @@
 }
 
 .profile_preferences_page hr {
-    width: 100%;
+    width: calc(100% - 4em);
 }
 
 .title_section {
-    text-align: start;
     display: flex;
     flex-direction: column;
     gap: 1em;
@@ -45,9 +45,17 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    padding: 0 1.9em;
     gap: 2em; 
 }
 
+@media screen and (max-width: 720px) {
+    .sports_cards {
+        width: 11.2em;
+        min-width: 100%;
+        padding: 0 1em;
+    }
+}
 
 @media screen and (min-width: 1500px) {
     .title_section {
