--- a/client/src/components/layout/Post.module.css
+++ b/client/src/components/layout/Post.module.css
@@ -251,8 +251,24 @@ div.slide_right {
 
 .actions_itens ul > li {
     width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+    max-height: min-content;
     transition: all 0.3s ease-in-out;
     padding: 0.4em;
+    cursor: pointer;
+}
+
+.comment_text {
+    overflow-y: auto;
+    height: 100%;
+    width: 100%;
+    max-height: 3em;
+    max-width: 15em;
+    padding-right: 0.5em;
+    text-align: justify;
+    white-space: pre-wrap;
 }
 
 .actions_itens ul > li:hover,
