--- a/client/src/components/layout/AppNavBar.module.css
+++ b/client/src/components/layout/AppNavBar.module.css
@@ -1,5 +1,5 @@
 .app_nav_bar,
-.app_nav_bar ul {
+.app_nav_bar > ul {
     display: flex;
     height: max-content;
     width: 100%;
@@ -14,7 +14,7 @@
     z-index: 4;
 }
 
-.app_nav_bar ul {
+.app_nav_bar > ul {
     list-style: none;
     padding: 0.6em 4%;
     align-items: center;
@@ -22,23 +22,23 @@
     gap: 1em;
 }
 
-.app_nav_bar ul li {
+.app_nav_bar > ul > li {
     cursor: pointer;
     padding: 0.6em;
     border-radius: 50%;
     transition: all 0.2s ease-in-out;
 }
 
-.app_nav_bar ul li:hover {
+.app_nav_bar > ul > li:hover {
     background-color: var(--ligth-bg-color);
 }
 
-.app_nav_bar ul li img {
+.app_nav_bar > ul > li > img {
     height: 1.5em;
     display: block;
 }
 
-.app_nav_bar ul li.profile_photo {
+.app_nav_bar > ul > li.profile_photo {
     padding: unset;
     height: 2.4em;
     width: 2.4em;
@@ -48,20 +48,23 @@
     overflow: hidden;
 }
 
-.app_nav_bar ul li.profile_photo:hover {
+.app_nav_bar > ul > li.profile_photo:hover {
     filter: brightness(0.4);
 }
 
-.app_nav_bar ul li.profile_photo img {
+.app_nav_bar > ul > li.profile_photo > img {
     object-fit: cover;
-    min-height: 100%;
+    height: 100%;
     width: 100%;
-    display: block;
 }
 
 @media screen and (min-width: 1500px) {
-    .app_nav_bar ul li img {
+    .app_nav_bar > ul > li:not(.profile_photo) > img {
         height: 2em;
-        display: block;
+    }
+
+    .app_nav_bar > ul > li.profile_photo {
+        height: 2.9em;
+        width: 2.9em;
     }
 }
