--- a/client/src/components/layout/ProfilePhotoContainer.module.css
+++ b/client/src/components/layout/ProfilePhotoContainer.module.css
@@ -10,24 +10,22 @@
     overflow: hidden;
     background-color: var(--ligth-bg-color);
     border: 3px solid var(--dark-theme-color);
-    transition: border 0.15s ease-in-out;
+    transition: all 0.15s ease-in-out;
 }
 
 .profile_photo_container:hover {
     border: 3px solid var(--ligth-theme-color);
 }
 
-
-.profile_photo_container img {
+.profile_photo_container > img {
     width: 100%;
-    height: 100% ;
+    height: 100%;
     display: block;
     object-fit: cover;
     transition: all 0.25s ease-in-out;
-    aspect-ratio: 1 / 1;
 }
 
-.profile_photo_container:hover img {
+.profile_photo_container:hover > img {
     filter: brightness(0.6);
     transform: scale(1.2);
 }
