--- a/client/src/components/layout/SportCard.module.css
+++ b/client/src/components/layout/SportCard.module.css
@@ -8,22 +8,35 @@
     border: 2px solid var(--ligth-theme-color);
     background-color: var(--ligth-font-color);
     border-radius: 10px;
-    box-shadow: 5px 5px 10px rgb(72, 72, 72);
-    transition: filter 0.2s ease-in-out;
+    box-shadow: 5px 5px 10px black;
+    cursor: pointer;
 }
 
-.sport_card img {
+.sport_card,
+.sport_card * {
+    transition: all 0.2s ease-in-out;    
+}
+
+.sport_card > img {
     height: 4em;
     width: 4em;
-    transition: all 0.2s ease-in-out;
 }
 
-.sport_card:hover img {
+.sport_card:hover > img {
     filter: drop-shadow(5px 5px 2px rgb(26, 26, 26));
     transform: scale(1.1);
 }
 
-.info {
+.sport_card:hover > .sport_info > .categories > span {
+    filter: drop-shadow(3px 3px 1px rgb(26, 26, 26));
+    transform: scale(1.025);
+}
+
+.sport_card:hover > .sport_info > span {
+    transform: scale(1.1);
+}
+
+.sport_info {
     width: 11.5em;
     height: 100%;
     display: flex;
@@ -32,7 +45,7 @@
     text-align: end;
 }
 
-.sport_name {
+.sport_info > span {
     color: var(--dark-theme-color);
     letter-spacing: 1px;
     font-size: 1.2em;
@@ -47,10 +60,10 @@
     width: auto;
 }
 
-.category {
+.categories > span {
     padding: 0.4em 0.6em;
     font-size: 0.7em;
-    border: 1px solid var(--dark-font-color);
+    border: 1px solid black;
     background-color: var(--ligth-bg-color);
     border-radius: 1.5em;
     letter-spacing: 0.4px;
@@ -67,25 +80,16 @@
         height: 21.2em;
         flex-direction: column;
         gap: 0.5em;
-        align-items: center;
     }
 
-    .info {
+    .sport_info {
         width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
         align-items: center;
         text-align: center;
     }
 
     .categories {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 0.7em;
         justify-content: center;
-        width: auto;
     }
 }
 
@@ -96,28 +100,20 @@
         width: 25.6em;
     }
 
-    .sport_name {
-        letter-spacing: 1px;
+    .sport_info > span {
         font-size: 1.6em;
     }
     
-    .category {
+    .categories > span {
         font-size: 0.95em;
     }
 
-    .info {
+    .sport_info {
         width: 15.3em;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        text-align: end;
     }
 
-    .sport_card img {
+    .sport_card > img {
         height: 5.3em;
         width: 5.3em;
-        border-radius: 50%;
-        border: 1px solid var(--dark-theme-color);
     }
 }
