--- a/client/src/components/layout/Post.module.css
+++ b/client/src/components/layout/Post.module.css
@@ -150,13 +150,13 @@
     gap: 0.6em;
 }
 
-.post_actions > ul > div > li {
-    cursor: pointer;
-}
+/* .post_actions > ul > div > li {
+} */
 
 .post_actions > ul > div > li > img {
     height: 1.5em;
     display: block;
+    cursor: pointer;
 }
 
 .caption {
@@ -238,42 +238,6 @@ div.slide_right {
     background-color: var(--dark-bg-color);
     border: 2px solid var(--dark-theme-color);
     z-index: 3;
-}
-
-.actions_itens ul {
-    width: 100%;
-    min-width: max-content;
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    padding: 0.5em;
-}
-
-.actions_itens ul > li {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    gap: 0.5em;
-    max-height: min-content;
-    transition: all 0.3s ease-in-out;
-    padding: 0.4em;
-    cursor: pointer;
-}
-
-.comment_text {
-    overflow-y: auto;
-    height: 100%;
-    width: 100%;
-    max-height: 3em;
-    max-width: 15em;
-    padding-right: 0.5em;
-    text-align: justify;
-    white-space: pre-wrap;
-}
-
-.actions_itens ul > li:hover,
-.selectedHashtag {
-    background-color: var(--ligth-bg-color);
 }
 
 .actions_itens > form {
