--- a/client/src/components/layout/Post.module.css
+++ b/client/src/components/layout/Post.module.css
@@ -1,49 +1,33 @@
 .post {
     position: relative;
     display: flex;
-    border: 5px solid var(--ligth-theme-color);
+    border: 3px solid var(--ligth-theme-color);
     border-bottom: unset;
     padding: 1em;
     background-color: var(--dark-bg-color);
     width: 100%;
     aspect-ratio: 2 / 1;
     gap: 1em;
-    /* overflow: hidden; */
-    min-width: min-content;
 }
 
 .container_divisor {
-    height: 90%;
+    height: 100%;
     width: 2px;
     background-color: var(--ligth-bg-color);
-    margin: auto 0;
 }
 
 .first_post_container {
     display: flex;
     flex-direction: column;
+    flex: 3;
     gap: 1em;
-    width: 50%;
 }
 
 .second_post_container {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: space-between;
-    flex: 1;
-    word-break: break-all;
+    flex: 2;
     gap: 1.5em;
-}
-
-.post_author_container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
-    overflow: hidden;
-    position: relative;
-    min-height: 3em;
 }
 
 .date {
@@ -57,27 +41,19 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: start;
-    overflow: hidden;
-}
-
-.medias div {
-    height: 100%;
-    width: 100%;
-    min-width: 100%;
-    display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
     position: relative;
 }
 
-.medias div.media_controls {
+.media_info {
     position: absolute;
     width: 100%;
     height: 100%;
 }
 
-.medias div.media_controls p {
+.media_info > p {
     height: max-content;
     width: max-content;
     padding: 0.3em;
@@ -88,19 +64,18 @@
     z-index: 3;
 }
 
-.medias div.media_controls p:first-child {
-    top: 1em;
-    left: 1em;
+.media_info > p:first-child {
+    top: 0.6em;
+    left: 0.6em;
 }
 
-.medias div.media_controls p:nth-child(2) {
-    top: 1em;
-    right: 1em;
-    display: none;
-}
+/* .media_info > p:nth-child(2) {
+    top: 0.6em;
+    right: 0.6em;
+} */
 
-.medias div img,
-.medias div video {
+.medias > img,
+.medias > video {
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -112,9 +87,7 @@
     width: 100%;
     display: flex;
     list-style: none;
-    align-items: end;
     justify-content: space-between;
-    flex-wrap: wrap-reverse;
     gap: 0.6em;
 }
 
@@ -124,14 +97,13 @@
 }
 
 .post_actions > div > li > img {
-    height: 1.5em;
+    height: 1.3em;
     display: block;
     cursor: pointer;
 }
 
 .caption {
     height: 100%;
-    max-height: 100%;
     width: 100%;
     letter-spacing: 0.6px;
     overflow-y: auto;
@@ -140,34 +112,30 @@
     padding: 0.5em;
     text-align: justify;
     white-space: pre-wrap;
+    word-break: break-all;
 }
 
-.caption span {
+.caption > span {
     color: var(--ligth-theme-color);
     font-weight: bold;   
 }
 
-.medias div.slide_container {
+.slide_container {
     position: absolute;
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: unset;
 }
 
-div.slide_left {
-    position: relative;
+.slide_left {
     width: 30%;
-    min-width: unset;
     border-radius: 0 30% 30% 0;
     margin-right: auto;
     z-index: 2;
 }
 
-div.slide_right {
-    position: relative;
+.slide_right {
     width: 30%;
-    min-width: unset;
     border-radius: 30% 0 0 30%;
     margin-left: auto;
     z-index: 2;
@@ -184,20 +152,19 @@ div.slide_right {
     overflow: auto;
     background-color: var(--dark-bg-color);
     border: 2px solid var(--dark-theme-color);
+    border-radius: 10px;
     z-index: 3;
 }
 
 .actions_itens > form {
     padding: 0.5em 0.5em 0 0.5em;
     text-align: center;
-    cursor: default;
 }
 
 @media screen and (max-width: 720px) {
     .post {
         flex-direction: column;
         border: 2px solid var(--ligth-theme-color);
-        border-bottom: unset;
         aspect-ratio: unset;
     }
 
@@ -205,14 +172,9 @@ div.slide_right {
         display: none;
     }
     
-    .first_post_container {
-        width: 100%;
-    }
-    
     .second_post_container {
         flex-direction: column-reverse;
         gap: 1em;
-        overflow: hidden;
     }
 
     .medias {
@@ -223,17 +185,10 @@ div.slide_right {
     }
 
     .post_actions {
-        gap: 1em;
         flex-wrap: wrap;
-        padding: 0 1em;
-    }
-    
-    .post_actions > div {
-        gap: 1em;
     }
 
     .caption {
-        font-size: 0.7em;
         max-height: 30%;
         min-height: 5em;
         aspect-ratio: 3 / 1;
@@ -244,4 +199,3 @@ div.slide_right {
         font-size: 0.9em;
     }
 }
-
