--- a/client/src/components/layout/PostItemsContainer.module.css
+++ b/client/src/components/layout/PostItemsContainer.module.css
@@ -21,14 +21,15 @@
 }
 
 .comment_text {
+    font-size: 0.8em;
     overflow-y: auto;
-    height: 100%;
-    width: 100%;
-    max-height: 3em;
-    max-width: 15em;
+    max-height: 5em;
+    width: 19.8em;
     padding-right: 0.5em;
     text-align: justify;
     white-space: pre-wrap;
+    word-break: break-all;
+    display: flex;
 }
 
 .post_items_container > li:hover,
