--- a/client/src/components/layout/ProfilePhotoContainer.module.css
+++ b/client/src/components/layout/ProfilePhotoContainer.module.css
@@ -4,17 +4,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 3em;
-    width: 3em;
     max-width: 3em;
     overflow: hidden;
     background-color: var(--ligth-bg-color);
-    border: 3px solid var(--dark-theme-color);
     transition: all 0.15s ease-in-out;
 }
 
 .profile_photo_container:hover {
-    border: 3px solid var(--ligth-theme-color);
+    border-color: var(--ligth-theme-color);
 }
 
 .profile_photo_container > img {
@@ -28,4 +25,22 @@
 .profile_photo_container:hover > img {
     filter: brightness(0.6);
     transform: scale(1.2);
+}
+
+.short {
+    height: 2.3em;
+    width: 2.3em;
+    border: 2px solid var(--dark-theme-color);
+}
+
+.medium {
+    height: 3em;
+    width: 3em;
+    border: 3px solid var(--dark-theme-color);
+}
+
+.large {
+    height: 5em;
+    width: 5em;
+    border: 4px solid var(--dark-theme-color);
 }
