Correção nocomportamento do erro ao criar post com mais de 9 midias + Correção no espaçamento dos elementos da navbar do aplicativo + Correção no ajuste de tamanho dos inputs + Mudança da cor do alerta

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
   --dark-theme-color: rgb(0, 87, 45);
   --dark-font-color: #000000;
   --ligth-font-color: #e7e7e7;
-  --alert-color: #ff0000;
+  --alert-color: #ffea02;
   --dark-bg-color: #101010;
   --ligth-bg-color: #3c3c3c;
   --white-bg-color: #898989;
