--- a/client/src/components/form/InputField.module.css
+++ b/client/src/components/form/InputField.module.css
@@ -59,6 +59,7 @@
 
 .inputField .alert {
     height: 3em;
+    min-height: min-content;
     font-size: 0.7em;
     margin: 0.1em 0.5em 0;
     text-align: justify;
