--- a/client/src/components/layout/AppNavBar.module.css
+++ b/client/src/components/layout/AppNavBar.module.css
@@ -16,7 +16,7 @@
 
 .app_nav_bar > ul {
     list-style: none;
-    padding: 0.6em 4%;
+    padding: 0.6em 4% 0.9em 0;
     align-items: center;
     justify-content: space-around;
     gap: 1em;
@@ -42,6 +42,7 @@
     padding: unset;
     height: 2.4em;
     width: 2.4em;
+    background-color: var(--ligth-bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
