término da refatoração dos componentes de layout

--- a/client/src/components/layout/ProfileSmallerContainer.module.css
+++ b/client/src/components/layout/ProfileSmallerContainer.module.css
@@ -6,9 +6,8 @@
     font-weight: bold;
     color: var(--ligth-theme-color);
     cursor: pointer;
-    width: 100%;
+    width: max-content;
     min-width: max-content;
     min-height: max-content;
     /* min-height: 3em; */
-
 }
